--- a/src/views/AnnouncementCenter/AnnouncementCenter.styl
+++ b/src/views/AnnouncementCenter/AnnouncementCenter.styl
@@ -495,10 +495,18 @@
         border-radius: 3px;
         font-size: 0.85em;
     }
+
+    .note {
+        font-size: 0.9rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        line-height: 1.0rem;
+        text-align: center;
+    }
 }
 
 // Inline translation styles
-.link-item-v3 {
+.AnnouncementCenter .link-item-v3 {
     border: 1px solid;
     themed(border-color, shade4);
     border-radius: 0.25rem;
