--- a/src/views/LibraryPlayer/LibraryPlayer.styl
+++ b/src/views/LibraryPlayer/LibraryPlayer.styl
@@ -33,6 +33,8 @@
     .collections {
         cursor: pointer;
         margin-bottom: 1rem;
+        display: flex;
+        flex-direction: column;
     }
 
     .games {
@@ -52,6 +54,43 @@
         span {
             display: table-cell;
             padding-right: 1rem;
+        }
+    }
+
+    .collection-entry {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0.5rem;
+
+        .collection-info {
+            display: flex;
+            align-items: center;
+            flex: 1;
+            cursor: pointer;
+
+            span {
+                padding-right: 1rem;
+            }
+        }
+
+        .share-collection-btn {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 0.25rem 0.5rem;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            margin-left: 1rem;
+
+            &:hover {
+                background: #0056b3;
+            }
+
+            i {
+                margin-right: 0.25rem;
+            }
         }
     }
 
@@ -91,8 +130,7 @@
         cursor: pointer;
     }
 
-    .collection-entry:hover {
-        cursor: pointer;
+    .collection-info:hover {
         text-decoration: underline;
     }
 
