Make ViewReport show if a game is unranked

--- a/src/views/ReportsCenter/ReportedGame.styl
+++ b/src/views/ReportsCenter/ReportedGame.styl
@@ -72,7 +72,9 @@
     .reported-game-timing {
         text-align: center;
     }
-
+    .reported-game-other-info {
+        text-align: center;
+    }
     // We have horizontal less room than `GameLog` expects
     .GameLog {
         tr {
