Checkbox logic error, css chrome-only error

--- a/src/views/LibraryPlayer/LibraryPlayer.styl
+++ b/src/views/LibraryPlayer/LibraryPlayer.styl
@@ -40,7 +40,7 @@
     .collection-header {
         display: flex;
         margin-bottom: 1rem;
-        align-items: anchor-center;
+        align-items: center;
 
         .collection-title {
             display: flex;
