--- a/src/views/LibraryPlayer/LibraryPlayer.styl
+++ b/src/views/LibraryPlayer/LibraryPlayer.styl
@@ -15,18 +15,50 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 .LibraryPlayer {
+    .space-between {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+    }
+
     .breadcrumbs {
         display: flex;
+        align-items: center;
         padding: 1rem;
         font-size: font-size-big;
 
         .breadcrumb {
             cursor: pointer;
-            padding-left: 0.5rem;
+            padding-left: 0.2rem;
+
+            .breadcrumb-name {
+                // The name part of the breadcrumb
+            }
+
+            .breadcrumb-slash {
+                margin-left: 0.25rem; // Controls space between name and slash
+            }
         }
 
         .breadcrumb:hover {
             text-decoration: underline;
+        }
+
+        .breadcrumb-lock {
+            // in case
+        }
+
+        .breadcrumb-share {
+            margin-left: 1rem;
+            padding: 0.25rem 0.5rem;
+            font-size: font-size-small;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 0.25rem;
         }
     }
 
@@ -49,6 +81,31 @@
             h3 {
                 margin-right: 1rem;
                 font-size: font-size-big;
+            }
+        }
+    }
+
+    .controls-row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1rem;
+        margin-bottom: 1rem;
+
+        .controls-left {
+            display: flex;
+            align-items: center;
+            min-width: 0;
+        }
+
+        .controls-right {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            flex-wrap: wrap;
+
+            .upload-button {
+                float: none;
             }
         }
     }
@@ -154,30 +211,23 @@
 
     .new-collection {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
+        gap: 1rem;
 
         input[type='text'] {
-            width: 100%;
-            margin: 0.5rem 1rem 0.5rem 0;
+            min-width: 200px;
+            margin: 0;
         }
 
         label {
             user-select: none;
         }
 
-        .name-checkbox {
-            margin-right: 1rem;
-
-            i {
-                margin: 0 0.5rem;
-            }
-        }
-
         .private-toggle {
             display: flex;
             align-items: center;
             cursor: pointer;
-            margin-left: 1rem;
+            white-space: nowrap;
 
             &.disabled {
                 opacity: 0;
@@ -205,8 +255,6 @@
     }
 
     .upload-button {
-        float: right;
-
         button {
             margin-left: 0.5rem;
         }
