Prep for simul message: tidy up important info div

--- a/src/views/ReportsCenter/ReportedGame.styl
+++ b/src/views/ReportsCenter/ReportedGame.styl
@@ -72,9 +72,12 @@
     .reported-game-timing {
         text-align: center;
     }
-    .reported-game-other-info {
+
+    .reported-game-important-info {
+        themed: color danger;
         text-align: center;
     }
+
     // We have horizontal less room than `GameLog` expects
     .GameLog {
         tr {
