Show "Simul" as important info if reported game is Simul for reported player.

--- a/src/views/ReportsCenter/ReportedGame.styl
+++ b/src/views/ReportsCenter/ReportedGame.styl
@@ -45,6 +45,7 @@
         max-width: 20rem;
         max-height: 20rem;
         padding: 2rem;
+        align-self: center;
     }
 
     #move-tree-container {
