Fix bad max-height in learning sections

--- a/src/views/LearningHub/LearningHub.styl
+++ b/src/views/LearningHub/LearningHub.styl
@@ -192,7 +192,7 @@
                 box-sizing: border-box;
 
                 &.expanded {
-                    max-height: 3000px; // Increased to accommodate more rows of cards
+                    max-height: none;
                     opacity: 1;
                     padding: 1.5rem;
                 }
