Clearer email validation error messaging

--- a/src/views/VerifyEmail/VerifyEmail.styl
+++ b/src/views/VerifyEmail/VerifyEmail.styl
@@ -19,4 +19,12 @@
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+
+    .error-message {
+        padding: 1rem;
+    }
+
+    .success-message {
+        padding: 1rem;
+    }
 }
