--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -333,6 +333,12 @@ goban-view-bar-width = 400px;
             position: relative;
             top: 25px;
         }
+
+        .cancel-button-zen {
+          align-self: center;
+          flex-shrink: 0;
+          position: inherit;
+        }
     }
 
     .left-col, .right-col {
