Add Basque Country and alternative Belarus flag

--- a/src/global_styl/flags32.styl
+++ b/src/global_styl/flags32.styl
@@ -20,7 +20,7 @@
     width: 32px;
     vertical-align: text-top;
     line-height: 32px;
-    background: url('https://cdn.online-go.com/assets/flags32.2025-01-02.png') no-repeat;
+    background: url('https://cdn.online-go.com/assets/flags32.2025-10-15.png') no-repeat;
 }
 
 .f32 ._African_Union {
@@ -1291,4 +1291,10 @@
 
 .f32 ._Galicia {
     background-position: 0 -9920px;
+}
+.f32 ._eus{
+    background-position:0 -9952px;
+}
+.f32 ._by-alt{
+    background-position:0 -9984px;
 }
